@startuml
skinparam classAttributeIconSize 0


class Tanque {
  - id : String
  - capacidadMaxima : double
  - nivelActual : double
  - estado : numerico
  --
  + Tanque(String, double, double)
  + getId() : String
  + getCapacidadMaxima() : double
  + getNivelActual() : double
  + getEstado() : String
  + llenar(double) : void
  + vaciar(double) : void
  + detener() : void
  + obtenerPorcentajeLlenado() : double
  + mostrarInformacion() : void
}

class Sensor {
  - id : String
  - tanqueMonitoreado : Tanque
  - ultimaLectura : double
  --
  + Sensor(String, Tanque)
  + getId() : String
  + leer() : double
  + getUltimaLectura() : double
  + lecturaValida() : boolean
}

class Main {
  + main(args : String[]) : void
}

Sensor  -->  Tanque
Main --> Tanque
Main --> Sensor

@enduml